--- a/css/framework.css
+++ b/css/framework.css
@@ -34,6 +34,9 @@
 .align-center {
     align-items: center;
 }
+.f-grow1 {
+    flex-grow: 1;
+}
 
 .d-grid {
     display: grid;
@@ -101,6 +104,7 @@ c-black {
 /* end color  */
 
 /* start padding , margin , radius */
+
 .p-5 {
     padding: 5px;
 }
@@ -112,6 +116,12 @@ c-black {
 }
 .p-20 {
     padding: 20px;
+}
+.pt-15 {
+    padding-top: 15px;
+}
+.pb-15 {
+    padding-bottom: 15px;
 }
 .m-0 {
     margin: 0;
@@ -127,6 +137,9 @@ c-black {
 }
 .mt-20 {
     margin-top: 20px;
+}
+.mr-10 {
+    margin-right: 10px;
 }
 .mb-10 {
     margin-bottom: 10px;
@@ -167,6 +180,9 @@ c-black {
 }
 .fs-14 {
     font-size: 14px;
+}
+.fs-16 {
+    font-size: 16px;
 }
 .fs-25 {
     font-size: 25px;
