--- a/css/master.css
+++ b/css/master.css
@@ -291,6 +291,9 @@ opacity: 0;
     height: 80px;
     margin-right: 20px;
 }
+.targets .target-row .icon:hover {
+    rotate: 10deg;
+}
 .targets .details {
     flex: 1;
 }
@@ -371,15 +374,166 @@ opacity: 0;
 }
 /* end tickets */
 
+/* start latest-news */
+.latest-news .row:not(:last-of-type) {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+.latest-news .row img {
+    width: 100px;
+    margin-right: 15px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.latest-news .row:hover img {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+.latest-news .row .info {
+    flex-grow: 1;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.latest-news .row:hover .info {
+    color: var(--blue-color);
+    cursor: pointer;
+    transform: translateX(10px);
+    -webkit-transform: translateX(10px);
+    -moz-transform: translateX(10px);
+    -ms-transform: translateX(10px);
+    -o-transform: translateX(10px);
+}
+.latest-news .row:hover .info p {
+    color: black;
+}
 
+@media (max-width:768px) {
+    .latest-news .row {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .latest-news .row:hover .info {
+        transform:none;
+        -webkit-transform:none;
+        -moz-transform:none;
+        -ms-transform:none;
+        -o-transform:none;
+}
+}
+/* end latest-news */
 
+/* start tasks  */
+.tasks .task:not(:last-of-type) {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+}
+.tasks .task .info {
+    cursor: pointer;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.tasks .task .info:hover {
+    color: var(--blue-color);
+    transform: translate(10px);
+    -webkit-transform: translate(10px);
+    -moz-transform: translate(10px);
+    -ms-transform: translate(10px);
+    -o-transform: translate(10px);
+}
+.tasks .task i {
+    margin-left: 10px;
+    cursor: pointer;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.tasks .task i:hover {
+    color: var(--red-color);
+    animation: bell 1s 1s both infinite;
+    -webkit-animation: bell 1s 1s both infinite;
+}
+/* end tasks  */
 
+/* start search-items  */
+.search-items .item span:nth-child(1) {
+    cursor: pointer;
+    width: 100%;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.search-items .item span:nth-child(1):hover {
+    color: var(--blue-color);
+    font-weight: bold;
+    transform: translate(10px);
+    -webkit-transform: translate(10px);
+    -moz-transform: translate(10px);
+    -ms-transform: translate(10px);
+    -o-transform: translate(10px);
+}
+/* end search-items  */
+
+/* start latest-uploaded  */
+.latest-uploaded ul li:not(:last-of-type) {
+    border-bottom: 1px solid #ddd;
+}
+.latest-uploaded ul li:hover img {
+    rotate: 9deg;
+}
+.latest-uploaded ul li img {
+    width: 40px;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.latest-uploaded ul li > div {
+    cursor: pointer;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.latest-uploaded ul li:hover > div {
+    color: var(--blue-color);
+    transform: translate(10px);
+    -webkit-transform: translate(10px);
+    -moz-transform: translate(10px);
+    -ms-transform: translate(10px);
+    -o-transform: translate(10px);
+} 
+/* end latest-uploaded  */
 
 
 /* animation  */
 @keyframes bell {
     0% { transform: rotate(0); }
-    10% { transform: rotate(30deg); }
+    10% { transform: rotate(30deg) ; }
     20% { transform: rotate(0); }
     80% { transform: rotate(0); }
     90% { transform: rotate(-30deg); }
