--- a/css/master.css
+++ b/css/master.css
@@ -69,6 +69,7 @@ ul {
 .sidebar ul li a span {
     font-size: 14px;
     margin-left: 10px;
+    color: black;
 }
 @media (min-width: 768px) {
     .sidebar h3::before,
