--- a/css/master.css
+++ b/css/master.css
@@ -367,6 +367,16 @@ opacity: 0;
     -o-transform: scale(1.05);
     background-color: #fffbfb;
 }
+.tickets .box:hover i {
+    transition: 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
+}
+.tickets .box:hover i.cir {
+    rotate: 360deg;
+}
 @media (max-width:768px) {
     .tickets .box {
         width: calc(100%);
@@ -452,7 +462,7 @@ opacity: 0;
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
 }
-.tasks .task .info:hover {
+.tasks .task:not(:nth-child(5)) .info:hover  {
     color: var(--blue-color);
     transform: translate(10px);
     -webkit-transform: translate(10px);
@@ -530,6 +540,167 @@ opacity: 0;
 } 
 /* end latest-uploaded  */
 
+/* start last-project  */
+.last-project ul {
+    position: relative;
+}
+.last-project ul::before {
+    content: "";
+    width: 2px;
+    height: calc(100% - 20px);
+    position: absolute;
+    background-color: var(--blue-color);
+}
+.last-project ul li {
+    position: relative;
+    padding-bottom: 15px;
+    margin-bottom:10px;
+    font-weight: 600;
+    margin-left: 30px;
+}
+.last-project ul li::before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background-color: white;
+    border: 2px solid white;
+    outline: 2px solid var(--blue-alt-color);
+    left: -41px;
+}
+.last-project ul li.done::before {
+    background-color: var(--blue-color);
+}
+.last-project ul li.curent::before {
+    animation: curent 1s 1s both infinite;
+    -webkit-animation: curent 1s 1s both infinite;
+}
+.last-project img {
+    width: 160px;
+    right: 0;
+    position: absolute;
+    bottom: 0;
+    opacity: 0.2;
+}
+/* end last-project  */
+
+/* start reminder */
+.reminders ul li .point {
+    width: 15px;
+    height: 15px;
+}
+.reminders ul li div.blue {
+    border-left: 2px solid var(--blue-color);
+}
+.reminders ul li div.green {
+    border-left: 2px solid var(--green-color);
+}
+.reminders ul li div.orange {
+    border-left: 2px solid var(--orange-color);
+}
+.reminders ul li div.red {
+    border-left: 2px solid var(--red-color);
+}
+
+/* end reminder */
+
+/* start latest post  */
+.latest-post .top img {
+    width: 60px;
+    height: 60px;
+}
+.latest-post .content {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+/* end latest post  */
+
+/* start content  */
+.content div.stutes:hover .fa-heart {
+    animation: bell 1s 1s both infinite;
+    -webkit-animation: bell 1s 1s both infinite;
+    color: var(--blue-color);
+    transform: scale(1.01);
+    -webkit-transform: scale(1.01);
+    -moz-transform: scale(1.01);
+    -ms-transform: scale(1.01);
+    -o-transform: scale(1.01);
+} 
+/* end content  */
+
+/* start social-media  */
+.social-media .box {
+    padding-left: 75px;
+}
+.social-media .box.twitter {
+    background-color: rgb(29 161 242 / 20%);
+}
+.social-media .box.facebook {
+    background-color: rgb(24 119 242 / 20%);
+}
+.social-media .box.youtube {
+    background-color: rgb(255 0 0 / 20%);
+}
+.social-media .box.linkedin {
+    background-color: rgb(0 119 181 / 20%);
+}
+.social-media .box i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: 0.3s;
+    width: 52px;
+}
+.social-media .box i:hover {
+    rotate: 6deg;
+}
+.social-media .box.twitter i {
+    background-color: #1da1f2;
+}
+.social-media .box.facebook i {
+    background-color: #1877f2;
+}
+.social-media .box.youtube i {
+    background-color: var(--red-color);
+}
+.social-media .box.linkedin i {
+    background-color: #0077b5;
+}
+.social-media .box a {
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.social-media .box a:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+.social-media .box.twitter a {
+    background-color: #1da1f2;
+}
+.social-media .box.facebook a {
+    background-color: #1877f2;
+}
+.social-media .box.youtube a {
+    background-color: var(--red-color);
+}
+.social-media .box.linkedin a {
+    background-color: #0077b5;
+}
+/* end social-media  */
 
 /* animation  */
 @keyframes bell {
@@ -546,5 +717,11 @@ opacity: 0;
     50% { opacity: 1; }
     51% { opacity: 0; }
     100% { opacity: 0; }
+  }
+  @keyframes curent {
+    0% {background-color: white;}
+    100% {
+        background-color: var(--blue-color);
+    }
   }
 /* animation  */
