--- a/css/master.css
+++ b/css/master.css
@@ -702,6 +702,120 @@ opacity: 0;
 }
 /* end social-media  */
 
+/* start projects  */
+.projects  {
+    margin-left: 20px;
+}
+.projects .responsive-table {
+    overflow-x: auto;
+
+}
+.projects table img {
+    width: 32px;
+    height: 32px;
+    padding: 2px;
+    background-color: white;
+}
+.projects .responsive-table td img:not(:first-child) {
+    margin-left: -20px;
+}
+.projects table {
+    min-width: 900px;
+    border-spacing: 0;
+}
+.projects table thead td {
+    background-color: #eee;
+    font-weight: bold;
+}
+.projects table  td {
+    padding: 15px;
+}
+.projects table tbody td {
+    border-left: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+}
+.projects table tbody td:last-child {
+    border-right: 1px solid #eee;
+}
+.projects table tbody tr {
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.projects table tbody tr:hover {
+    background-color: #faf7f7;
+}
+/* end projects  */
+
+
+
+/* start settings */
+.setting-page {
+    grid-template-columns: repeat(auto-fill,minmax(550px,1fr));
+}
+@media(max-width:767px) {
+    .setting-page {
+        grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+.setting-page .close-message{
+    border: 1px solid #ccc;
+    resize: none;
+    min-height: 150px;
+}
+.setting-page .email {
+    display: inline-block;
+    width: calc(100% - 90px);
+    background-color: #f0f4f8;
+    cursor: no-drop;
+}
+    /* start security */
+.security div:not(:last-of-type) {
+    border-bottom: 1px solid #eee;
+}
+.security div input {
+    background-color: #f6f6f6;
+    border: 1px solid #ccc;
+    border-left: none;
+    border-radius: 0 6px 6px 0;
+    height: 40px;
+    
+} 
+.security div i {
+    background-color: #f6f6f6;
+    border: 1px solid #ccc;
+    width: 40px;
+    height: 40px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+
+.facebook:focus-within i {
+    color: #1877f2;
+}
+.twitter:focus-within i {
+    color: var(--blue-color);
+}
+.linkedin:focus-within i {
+    color: var(--blue-alt-color);
+}
+.youtube:focus-within i {
+    color: var(--red-color);
+}
+
+    /* end security */
+
+
+
+/* end settings */
+
 /* animation  */
 @keyframes bell {
     0% { transform: rotate(0); }
