--- a/css/master.css
+++ b/css/master.css
@@ -786,6 +786,8 @@ opacity: 0;
     
 } 
 .security div i {
+    display: flex;
+    align-items: center;
     background-color: #f6f6f6;
     border: 1px solid #ccc;
     width: 40px;
@@ -812,7 +814,67 @@ opacity: 0;
 
     /* end security */
 
+    /* start wedget control  */
 
+    /* end wedget control  */
+
+    /* start security */
+.controls input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+}
+.controls label {
+    position: relative;
+    padding-left: 30px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.controls label::before {
+    content: "";
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    border: 2px solid var(--gray-color);
+    left: 0;
+    top: 50%;
+    margin-top: -9px;
+}
+.controls label::after {
+    font-family: "Font Awesome 6 Free";
+    content: "\f00c";
+    font-weight: 900;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    top: 50%;
+    margin-top: -9px;
+    width: 18px;
+    height: 18px;
+    background-color: var(--blue-color);
+    color: white;
+    transition: 0.3s;
+    transform: scale(0);
+}
+.controls input[type="checkbox"]:checked + label::after {
+    transform: scale(1) rotate(360deg);
+    -webkit-transform: scale(1) rotate(360deg);
+    -moz-transform: scale(1) rotate(360deg);
+    -ms-transform: scale(1) rotate(360deg);
+    -o-transform: scale(1) rotate(360deg);
+}
+    /* end security */
+
+    /* start backup  */
+.backup .date {
+    
+}
+    /* end backup  */
 
 /* end settings */
 
