--- a/css/framework.css
+++ b/css/framework.css
@@ -31,8 +31,16 @@
 .space-betwen {
     justify-content: space-between;
 }
+.between-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .align-center {
     align-items: center;
+}
+.flex-end {
+    justify-content: end;
 }
 .f-grow1 {
     flex-grow: 1;
@@ -44,9 +52,13 @@
 .gap-20 {
     gap: 20px;
 }
-.in-block {
+.gap-25 {
+    gap: 25px;
+}
+.in-block { 
     display: inline-block;
 }
+
 /* end display  */
 
 /* start position */
@@ -124,7 +136,7 @@
     padding: 5px;
 }
 .p-10 {
-    padding: 15px 10px;
+    padding: 10px;
 }
 .p-15 {
     padding: 15px;
@@ -139,6 +151,9 @@
     padding-top: 20px;
 }
 
+.pb-10 {
+    padding-bottom: 10px;
+}
 .pb-15 {
     padding-bottom: 15px;
 }
@@ -193,6 +208,9 @@
 .b-ccc {
     border:1px solid #ccc;
 }
+.bb-eee {
+    border-bottom: 1px solid #eee;
+}
 .rad-6 {
     border-radius: 6px;
     -webkit-border-radius: 6px;
@@ -242,7 +260,9 @@
 .fs-25 {
     font-size: 25px;
 }
-
+.fw-n {
+    font-weight: normal;
+}
 .fw-bold {
     font-weight: bold;
 }
@@ -264,7 +284,6 @@
 .between-flex {
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 .center-flex {
     display: flex;
@@ -272,7 +291,7 @@
     justify-content: center;
 }
 .btn-shape {
-    padding: 4px 10px;
+    padding: 4px 5px;
     border-radius: 6px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
